<resources>
    <string name="app_name">ZXing Scanner Sample</string>
    <string name="scanner_activity">Full Activity</string>
    <string name="scanner_fragment_activity">Full Fragment Activity</string>
    <string name="simple_scanner_activity">Simple Activity</string>
    <string name="custom_view_finder_scanner_activity">Custom View Finder Activity</string>
    <string name="scaling_scanner_activity">Scaling Activity</string>
    <string name="simple_scanner_fragment_activity">Simple Fragment Activity</string>
    <string name="full_screen_scanner_fragment_activity">Full Screen Fragment Activity</string>
    <string name="simple_activity_sample">Simple Activity Sample</string>
    <string name="simple_fragment_sample">Simple Fragment Sample</string>
    <string name="activity_sample">Full Activity Sample</string>
    <string name="fragment_sample">Full Fragment Sample</string>
    <string name="full_screen_sample">Full Screen Fragment Sample</string>
    <string name="custom_view_finder_sample">Custom View Finder Sample</string>
    <string name="scaling_sample">Scaling Sample</string>
    <string name="qr_code_generator_sample">QR Code Generator Sample</string>
    <string name="qr_code_generator_instruction">Write something to generate a QR Code:</string>
    <string name="qr_code_generator_hint">Write something</string>
    <string name="qr_code_generator_generate">Generate QR Code</string>
    <string name="scanner_instructions">Place a barcode in the viewfinder rectangle to scan it.</string>
    <string name="toggle_flash">Flash</string>
    <string name="flash_on">Flash [ON]</string>
    <string name="flash_off">Flash [OFF]</string>
    <string name="auto_focus_on">Auto Focus [ON]</string>
    <string name="auto_focus_off">Auto Focus [OFF]</string>
    <string name="formats">Formats</string>
    <string name="choose_formats">Choose Formats</string>
    <string name="select_camera">Select a Camera</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <bool name="cameraPreviewShouldFillView">true</bool>
</resources>
