<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="launchSimpleActivity"
                android:text="@string/simple_activity_sample" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="launchSimpleFragmentActivity"
                android:text="@string/simple_fragment_sample" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="launchFullActivity"
                android:text="@string/activity_sample" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="launchFullFragmentActivity"
                android:text="@string/fragment_sample" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="launchFullScreenScannerFragmentActivity"
                android:text="@string/full_screen_sample" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="launchCustomViewFinderScannerActivity"
                android:text="@string/custom_view_finder_sample" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="launchScalingScannerActivity"
                android:text="@string/scaling_sample" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
